# football-engine

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 20260213_1925_140984494088_create_matches_events_analytics_.py
docs/: INDEX.md  analytics_v1.md  api_contract.md  architecture.md  development_plan.md  domain_model.md  event_types.md  module_map.md
scripts/: load_test_websocket.py  run_simulator.py  test_full_websocket_flow.py  test_websocket.py  test_websocket_simple.py
src/football_engine/: README.md  __init__.py  main.py
src/football_engine/api/: app_factory.py
src/football_engine/api/dependencies/: container.py  services.py  session.py
src/football_engine/api/schemas/: __init__.py  event_schemas.py  match_schemas.py
src/football_engine/application/dto/: __init__.py  ingest_result_dto.py  match_state_dto.py
src/football_engine/application/services/: __init__.py  create_match_service.py  get_analytics_service.py  get_state_service.py  ingest_event_service.py
src/football_engine/domain/entities/: __init__.py  analytics_snapshot.py  event.py  match.py
src/football_engine/domain/enums/: __init__.py
src/football_engine/domain/repositories/: __init__.py  analytics_repository.py  event_repository.py  match_repository.py
src/football_engine/domain/services/: __init__.py  (+1 more)
tests/: conftest.py
tests/integration/api/: test_match_and_events.py  test_system_routes.py  test_websocket_stream.py
tests/unit/: test_smoke.py
tests/unit/infrastructure/: test_simulator_provider.py
(+18 files in other folders)
